포스트 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DiaryRam</string>
+    <string name="app_name">Diaryram</string>
 
     <string name="facebook_app_id">782708175205659</string>
 
